spec/test/parser/valid/literals_and_names/this_primary_expression.java
protected class A {
  public A() {}
  public A returnThis() {
    return this;
  }
}

