spec/test/parser/invalid/types/multi_array.java
protected class A {
  protected int[][] x;
}

